first-helm/templates/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: first-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: first-app
    spec:
      containers:
        - name: first-app
          image: gcr.io/google-samples/node-hello:1.0
          ports: 
            - containerPort: 8080
              protocol: TCP
