first-helm/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: first-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: first-app
