first-helm/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: first-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: first.domain
    http:
      paths:
      - path: /hello
        backend:
          serviceName: first-svc
          servicePort: 8080
